<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/dialog_proceed_wish_list_message"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dialog_cancel"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/dialog_proceed_wish_list_cancel_button"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/dialog_button_text_color"
            android:background="@color/white"
            android:gravity="center"
            style="?android:attr/borderlessButtonStyle"
            />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_dialog_ok"
            android:layout_width="@dimen/dialog_button_width"
            android:layout_height="@dimen/dialog_button_height"
            android:text="@string/dialog_proceed_wish_list_ok_button"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:textColor="@color/dialog_button_text_color"
            android:background="@color/white"
            style="?android:attr/borderlessButtonStyle"
            />

    </LinearLayout>
</LinearLayout>