<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background_gray"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/tv_product_catalogue_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catalogue_title"
        android:textSize="@dimen/catalogue_title_font_size"
        android:layout_marginTop="15dp"
        android:layout_marginStart="10dp"
        android:textStyle="bold"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/catalogue_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        />

    <LinearLayout
        android:id="@+id/wish_list_block"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/wish_list_background_gray"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >

            <TextView
                android:text="@string/wish_list"
                android:textSize="@dimen/wish_list_title_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textStyle="bold"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                />

            <TextView
                android:id="@+id/tv_total_price"
                android:textSize="@dimen/wish_list_title_font_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/wish_list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"


            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/wish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="15dp"
        >

        <TextView
            android:text="@string/wish_list_sub_total_label"
            android:textStyle="bold"
            android:textSize="@dimen/wish_list_price_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/tv_wish_list_sub_total"
            android:layout_marginStart="10dp"
            android:textSize="@dimen/wish_list_price_text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/shipping"
        android:textColor="@color/text_green"
        android:textSize="@dimen/wish_list_shipping_font_size"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_wish_list_sub_total"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textStyle="bold"
        android:orientation="vertical"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_wish_list_proceed_button"
        android:layout_width="@dimen/product_detail_action_button_width"
        android:layout_height="@dimen/wish_list_proceed_button_height"
        android:background="@drawable/product_details_red_button"
        android:text="@string/wish_list_proceed_button_text"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginBottom="25dp"
        />
</LinearLayout>